--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-data
+# Default ignored files
+/shelf/
+/workspace.xml
 .idea
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+/data
